right side fix to stop covering CTA buttons

--- a/src/App.css
+++ b/src/App.css
@@ -116,8 +116,9 @@ body {
     flex-direction: column;
     flex-wrap: wrap;
     width: 100vw;
-    max-height: 200px;
-    margin-top: -100px;
+    /* max-height: 200px; */
+    margin-top: 0px;
+    min-height: 650px;
   }
 
   .joinusT{
